# libleet

./: .gitignore  LICENSE  Makefile  README.md  TODO  build-test.sh  libleet.sln  libleet.vcxproj  libleet.vcxproj.filters  meson.build  meson_options.txt  packages.config  setup.ps1  setup.sh  test.cpp
docs/: Doxyfile  docs.md
docs/html/: Encryption_8cpp.html  Encryption_8cpp__dep__incl.map  Encryption_8cpp__dep__incl.md5  Encryption_8cpp_source.html  Event_8cpp.html  Event_8cpp__dep__incl.map  Event_8cpp__dep__incl.md5  Event_8cpp_source.html  File_8cpp.html  File_8cpp__dep__incl.map  File_8cpp__dep__incl.md5  File_8cpp_source.html  Login_8cpp.html  Login_8cpp__dep__incl.map  Login_8cpp__dep__incl.md5  Login_8cpp_source.html  Message_8cpp.html  Message_8cpp__dep__incl.map  Message_8cpp__dep__incl.md5  Message_8cpp_source.html  README_8md.html  Request_8cpp.html  Request_8cpp__dep__incl.map  Request_8cpp__dep__incl.md5  Request_8cpp_source.html  Room_8cpp.html  Room_8cpp__dep__incl.map  Room_8cpp__dep__incl.md5  Room_8cpp_source.html  User_8cpp.html  User_8cpp__dep__incl.map  User_8cpp__dep__incl.md5  User_8cpp_source.html  Voip_8cpp.html  Voip_8cpp__dep__incl.map  Voip_8cpp__dep__incl.md5  Voip_8cpp_source.html  annotated.html  classes.html  classleetCrypto_1_1randomBytes-members.html  (+80 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  (+39 more)
docs/latex/: Encryption_8cpp.tex  Encryption_8cpp__dep__incl.md5  Encryption_8cpp_source.tex  Event_8cpp.tex  Event_8cpp__dep__incl.md5  Event_8cpp_source.tex  File_8cpp.tex  File_8cpp__dep__incl.md5  File_8cpp_source.tex  Login_8cpp.tex  Login_8cpp__dep__incl.md5  Login_8cpp_source.tex  Message_8cpp.tex  Message_8cpp__dep__incl.md5  Message_8cpp_source.tex  README_8md.tex  Request_8cpp.tex  Request_8cpp__dep__incl.md5  Request_8cpp_source.tex  Room_8cpp.tex  Room_8cpp__dep__incl.md5  Room_8cpp_source.tex  User_8cpp.tex  User_8cpp__dep__incl.md5  User_8cpp_source.tex  Voip_8cpp.tex  Voip_8cpp__dep__incl.md5  Voip_8cpp_source.tex  annotated.tex  classleetCrypto_1_1randomBytes.tex  classleet_1_1Attachment_1_1Attachment.tex  classleet_1_1Encryption.tex  classleet_1_1Encryption__coll__graph.md5  classleet_1_1Event_1_1Event.tex  classleet_1_1Filter_1_1Filter.tex  classleet_1_1Message_1_1Message.tex  classleet_1_1Room_1_1Room.tex  classleet_1_1Room_1_1RoomConfiguration.tex  classleet_1_1Space_1_1Space.tex  classleet_1_1Sync_1_1Sync.tex  (+33 more)
docs/man/man3/: Encryption.cpp.3  Event.cpp.3  File.cpp.3  Login.cpp.3  Message.cpp.3  README.md.3  Request.cpp.3  Room.cpp.3  User.cpp.3  Voip.cpp.3  _home_speedie_libleet_include_.3  _home_speedie_libleet_src_.3  leet.3  leetCrypto.3  leetCrypto_randomBytes.3  leet_Attachment.3  leet_Attachment_Attachment.3  leet_Encryption.3  leet_Event.3  leet_Event_Event.3  leet_Filter.3  leet_Filter_Filter.3  leet_Message.3  leet_Message_Message.3  leet_Room.3  leet_Room_Room.3  leet_Room_RoomConfiguration.3  leet_Space.3  leet_Space_Space.3  leet_Sync.3  leet_Sync_Sync.3  leet_Sync_inviteEvent.3  leet_Sync_megolmSession.3  leet_Sync_nameEvent.3  leet_Sync_userEvent.3  leet_User.3  leet_User_Credentials.3  leet_User_CredentialsResponse.3  leet_User_Device.3  leet_User_Profile.3  (+5 more)
examples/: basic-chat-program.cpp  create-a-room.cpp  get-alias.cpp  get-userid.cpp  return-room-properties.cpp  send-message.cpp
examples/basic-chat-program/: .gitignore  basic-chat-program.cpp  meson.build
examples/basic-chat-program/subprojects/: cpr.wrap
examples/decode-mxc-url/: .gitignore  decode-mxc-url.cpp  meson.build
examples/decode-mxc-url/subprojects/: olm.wrap  openssl.wrap
examples/download-mxc-url/: .gitignore  download-mxc-url.cpp  meson.build
examples/get-room-aliases/: .gitignore  get-room-aliases.cpp  meson.build
examples/get-url-preview/: .gitignore  get-url-preview.cpp  meson.build
examples/parse-url/: .gitignore  meson.build  parse-url.cpp
examples/post-image/: .gitignore  meson.build  post-image.cpp
examples/post-image/subprojects/: nlohmann_json.wrap
examples/rest-api/: .gitignore  meson.build  rest-api.cpp  rest-api.hpp  use.sh
examples/return-encrypted-sessions/: .gitignore  meson.build  return-encrypted-sessions.cpp
examples/return-parsed-sync/: .gitignore  meson.build  return-parsed-sync.cpp
examples/return-supported-methods/: .gitignore  meson.build  return-supported-methods.cpp
examples/return-sync/: .gitignore  meson.build  return-sync.cpp
include/: libleet.hpp
include/crypto/: olm.hpp
include/net/: Request.hpp
src/: Encryption.cpp  Event.cpp  File.cpp  Login.cpp  Message.cpp  Request.cpp  Room.cpp  Sync.cpp  User.cpp  Voip.cpp  libleet.cpp  libleet.hpp
src/crypto/: olm.cpp
src/net/: Cert.cpp  Request.cpp
subprojects/: cpr.wrap  nlohmann_json.wrap  olm.wrap  openssl.wrap
windows-olm/: README.md
windows-olm/include/olm/: error.h  inbound_group_session.h  olm.h  olm_export.h  outbound_group_session.h  pk.h  sas.h
windows-olm/lib/: olm.lib
windows-olm/lib/cmake/Olm/: OlmConfig.cmake  OlmConfigVersion.cmake  OlmTargets-debug.cmake  OlmTargets-release.cmake  OlmTargets.cmake
